Switching to depend on SHE_PPT 8.6 and inherit Elements dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ find_package(ElementsProject)
 #---------------------------------------------------------------
 
 # Declare project name and version
-elements_project(SHE_Validation 0.1 USE Elements 5.10)
+elements_project(SHE_Validation 0.1 USE SHE_PPT 8.6)
