Renaming so this refers specifically to CTI-Gal validation

--- a/SHE_Validation_CTI/CMakeLists.txt
+++ b/SHE_Validation_CTI/CMakeLists.txt
@@ -9,7 +9,7 @@ elements_install_python_modules()
 
 # Instruction for creating a Python executable
 # elements_add_python_program(...)
-elements_add_python_program(SHE_Validation_ValidateCTI SHE_Validation_CTI.ValidateCTI)
+elements_add_python_program(SHE_Validation_ValidateCTIGal SHE_Validation_CTI.ValidateCTIGal)
 
 # Install the configuration files
 # elements_install_conf_files()
