Adding MatchToTU as a python program

--- a/SHE_Validation/CMakeLists.txt
+++ b/SHE_Validation/CMakeLists.txt
@@ -8,7 +8,7 @@ elements_depends_on_subdirs(ElementsKernel)
 elements_install_python_modules()
 
 # Instruction for creating a Python executable
-# elements_add_python_program(...)
+elements_add_python_program(SHE_Validation_MatchToTU SHE_Validation.MatchToTU)
 
 # Install the configuration files
 # elements_install_conf_files()
