Adding exec for global validation

--- a/SHE_Validation_ShearBias/CMakeLists.txt
+++ b/SHE_Validation_ShearBias/CMakeLists.txt
@@ -9,6 +9,7 @@ elements_install_python_modules()
 
 # Instruction for creating a Python executable
 elements_add_python_program(SHE_Validation_ValidateShearBias SHE_Validation_ShearBias.ValidateShearBias)
+elements_add_python_program(SHE_Validation_ValidateGlobalShearBias SHE_Validation_ShearBias.ValidateGlobalShearBias)
 
 # Install the configuration files
 # elements_install_conf_files()
