--- a/SHE_Validation/CMakeLists.txt
+++ b/SHE_Validation/CMakeLists.txt
@@ -9,10 +9,11 @@ elements_install_python_modules()
 
 # Instruction for creating a Python executable
 elements_add_python_program(SHE_Validation_MatchToTU SHE_Validation.MatchToTU)
+elements_add_python_program(SHE_Validation_MatchToTUOnly SHE_Validation.MatchToTUOnly)
+elements_add_python_program(SHE_Validation_MatchToTUExtend SHE_Validation.MatchToTUExtend)
 
 # Install the configuration files
 # elements_install_conf_files()
 
 # Install the auxiliary files
 # elements_install_aux_files()
-                
