Adding entry-point file for CTI-PSF local validation, and various cleanup of code for executable entry-point files

--- a/SHE_Validation_CTI/CMakeLists.txt
+++ b/SHE_Validation_CTI/CMakeLists.txt
@@ -10,6 +10,7 @@ elements_install_python_modules()
 # Instruction for creating a Python executable
 # elements_add_python_program(...)
 elements_add_python_program(SHE_Validation_ValidateCTIGal SHE_Validation_CTI.ValidateCTIGal)
+elements_add_python_program(SHE_Validation_ValidateCTIPSF SHE_Validation_CTI.ValidateCTIPSF)
 
 # Install the configuration files
 # elements_install_conf_files()
@@ -17,4 +18,3 @@ elements_install_conf_files()
 
 # Install the auxiliary files
 # elements_install_aux_files()
-                
