Setting up entry-point file for CalcCommonValData

--- a/SHE_Validation/CMakeLists.txt
+++ b/SHE_Validation/CMakeLists.txt
@@ -8,6 +8,7 @@ elements_depends_on_subdirs(ElementsKernel)
 elements_install_python_modules()
 
 # Instruction for creating a Python executable
+elements_add_python_program(SHE_Validation_CalcCommonValData SHE_Validation.CalcCommonValData)
 elements_add_python_program(SHE_Validation_MatchToTU SHE_Validation.MatchToTU)
 elements_add_python_program(SHE_Validation_MatchToTUOnly SHE_Validation.MatchToTUOnly)
 elements_add_python_program(SHE_Validation_MatchToTUExtend SHE_Validation.MatchToTUExtend)
