Defining executable in CMakeLists.txt

--- a/SHE_Validation_PSF/CMakeLists.txt
+++ b/SHE_Validation_PSF/CMakeLists.txt
@@ -8,11 +8,10 @@ elements_depends_on_subdirs(ElementsKernel)
 elements_install_python_modules()
 
 # Instruction for creating a Python executable
-# elements_add_python_program(...)
+elements_add_python_program(SHE_Validation_ValidatePSFRes SHE_Validation_PSF.ValidatePSFRes)
 
 # Install the configuration files
 # elements_install_conf_files()
 
 # Install the auxiliary files
 # elements_install_aux_files()
-                
