--- a/SHE_Validation_DataQuality/CMakeLists.txt
+++ b/SHE_Validation_DataQuality/CMakeLists.txt
@@ -63,6 +63,7 @@ elements_install_python_modules()
 #===============================================================================
 elements_add_python_program(ValidateGalInfo SHE_Validation_DataQuality.ValidateGalInfo)
 elements_add_python_program(ValidateDataProc SHE_Validation_DataQuality.ValidateDataProc)
+elements_add_python_program(ValidateSedExist SHE_Validation_DataQuality.ValidateSedExist)
 
 #===============================================================================
 # Add the elements_install_conf_files macro
