Fixing program names

--- a/SHE_Validation_PSF/CMakeLists.txt
+++ b/SHE_Validation_PSF/CMakeLists.txt
@@ -9,9 +9,9 @@ elements_install_python_modules()
 
 # Instruction for creating a Python executable
 elements_add_python_program(SHE_Validation_ValidatePSFResStarPos SHE_Validation_PSF.ValidatePSFResStarPos)
-elements_add_python_program(SHE_Validation_ValidatePSFResInterp SHE_Validation_PSF.SHE_Validation_ValidatePSFResInterp)
-elements_add_python_program(SHE_Validation_ValidatePSFModelErr SHE_Validation_PSF.SHE_Validation_ValidatePSFModelErr)
-elements_add_python_program(SHE_Validation_ValidatePSFLambda SHE_Validation_PSF.SHE_Validation_ValidatePSFLambda)
+elements_add_python_program(SHE_Validation_ValidatePSFResInterp SHE_Validation_PSF.ValidatePSFResInterp)
+elements_add_python_program(SHE_Validation_ValidatePSFModelErr SHE_Validation_PSF.ValidatePSFModelErr)
+elements_add_python_program(SHE_Validation_ValidatePSFLambda SHE_Validation_PSF.ValidatePSFLambda)
 
 # Install the configuration files
 # elements_install_conf_files()
