--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,4 @@ before_script:
 PEP8:
   stage: test
   script:
-    - flake8 --max-line-length 120 SHE_Validation
+    - flake8 --max-line-length 120 SHE_Validation SHE_Validation_CTI SHE_Validation_PSF SHE_Validation_ShearBias
